dp-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
      version: v1
  template:
    metadata:
      labels:
        app: nodejs-app
        version: v1
    spec:
      containers:
      - name: nodejs-app-v1
        image: ooghenekaro/nodejswebapp:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs-app
  ports:
  - port: 80
    targetPort: 3000
    name: http
