dr.yml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nodejs-dr
spec:
  host: nodejs-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
